Slice.send takes Headers